--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" th:replace="~{fragments/layout :: layout (~{::body},'owners')}" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
+    <meta charset="UTF-8">
     <title>List of Owners</title>
 </head>
 <body>
 
 <!--/*@thymesVar id="owner" type="xj.springframework.sfgpetclinic.model.Owner"*/-->
 
-<h1 th:text="'List of Owners'"> List of Owners...</h1>
+<h2 th:text="'List of Owners'"> List of Owners...</h2>
 
-<table>
+<table class="table table-striped">>
     <thead>
     <tr>
-        <th>Id</th>
-        <th>First Name</th>
+        <th style="width: 150px;">Id</th>
+        <th style="width: 200px;">First Name</th>
         <th>Last Name</th>
     </tr>
     </thead>
